--- a/html/assign09_q3/style.css
+++ b/html/assign09_q3/style.css
@@ -4,6 +4,9 @@ body {
     padding: 0;
     background-color: #A0E7E5;
 }
+.cart{
+   color:rgb(115, 115, 171); 
+}
 
 header {
     background: #fff;
